assets/style.css
body {
    background-color: #000;
}

p {
    font-family: 'Roboto';
    color: #fefefe;
    overflow-y: auto;
}

h4 {
    font-family: 'Roboto';
    font-size: 1.2em;
}

.leftpane p {
    padding-right: 42px;
}

#display_id {
    font-family: 'Roboto';
    color: #FBF37C;
    margin-bottom: 0%;
}

#title {
    font-family: 'Roboto';
    font-size: 100px;
    line-height: 1.005;
    color: #fefefe;
    margin-top: 0px;
    margin-bottom: 0%;
    padding: 0px;

}

hr {
    width: 610px;
    margin-left: 0;
    
}

button
{
    background-color: #000;
    border: 2px solid #fefefe;
    border-radius: 10px;
    width: 100px;
    height: 40px;
    margin: 5px;
    color: #fefefe;
    text-align: center;
    cursor: pointer;
    

}


button:hover {
    background-color: #FBF37C;
    color: #fefefe;
}


button:active {
  background-color: #cacaca;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

#container{
    width: 100%;
    margin: 8px;
}


.leftpane{
    width: 50%;
    height: 100%;
    float: left;
}

#div_icons{
    margin-top: 16px;
    position: absolute;
    bottom: 16px;
}

img {
    width: 50px;
    height: 50px;
    margin-right: 1px;
}

.rightpane{
    width: 50%;
    height: 100%;
    float: left;
    z-index: -1;
    top: 0px;
}

#right_image{
    width: 100%;
    height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#bottom_div{
    background-color: #FBF37C;
    width: 100%;
    height: 20%;
    position: relative;
    margin-top: -140px;
    opacity: 90%;
}

.icons {
    cursor: pointer;
}

@media screen and (max-width: 800px){
    .leftpane, .rightpane {
        width: 100%;
    }
    #right_image{
        width: 100%;
    }
    #title{
        font-size: 20vw;
    }
    hr{
        width: 100%;
    }

.modal{
  transform: translate(0, -9%);
  
}

.modal-body{
    width: 100%;
}

.modal-body p {
    padding-right: 15px;
}

.modal-content {
    margin-top: 20px;
    width: 95%;
    max-height: 90vh;
}
    
}

.modal
{
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.8);
}

.modal-header
{
    padding: 2px 16px;
    background-color: #FBF37C;
}

.modal-body
{
    padding-left: 20px;
    background-color: #000;
    overflow-y: auto;
    flex-grow: 1;
    
}

.modal-content
{
    position: relative;
    background-color: #000;
    margin: auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    border: 1px solid #666;
    border-radius: 8px;
    overflow: hidden;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s;
}

@-webkit-keyframes animatetop
{
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}

@keyframes animatetop
{
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}

.close {
    margin-top: 8px;
    color: #000;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: #fefefe;
    text-decoration: none;
    cursor: pointer;
  }

